--- a/templates/item/item-feature-sheet.hbs
+++ b/templates/item/item-feature-sheet.hbs
@@ -1,4 +1,10 @@
 <form class="{{cssClass}}" autocomplete="off">
+    <div class="itemtype resource-label flex-group-right">
+    <p>{{localize (concat 'TYPES.Item.' item.type)}}</p>
+  </div>
+  <div class="itemtype subtype resource-label flex-group-right">
+    <p>{{item.system.subType}}</p>
+  </div>
   <header class="sheet-header">
     <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
     <div class="header-fields">
@@ -23,6 +29,13 @@
 
     {{!-- Attributes Tab --}}
     <div class="tab attributes" data-group="primary" data-tab="attributes">
+            <div class="resource flexrow">
+        <label class="resource-label">Feature Type</label>
+             <select name="system.subType">
+    {{selectOptions itemTypes.features selected=item.system.subType }}
+    </select>
+    
+      </div>
       {{!-- As you add new fields, add them in here! --}}
     </div>
 
