--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -8,11 +8,9 @@
       {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
       use both the "grid" and "grid-Ncol" class where "N" can be any number
       from 1 to 12 and will create that number of columns.  --}}
-      <div class="resources grid grid-3col">
+      
+      {{!-- <div class="resources grid grid-3col">
 
-        {{!-- "flex-group-center" is also defined in the _grid.scss file
-        and it will add a small amount of padding, a border, and will
-        center all of its child elements content and text. --}}
         <div class="resource flex-group-center">
           <label for="system.health.value" class="resource-label">Health</label>
           <div class="resource-content flexrow flex-center flex-between">
@@ -41,14 +39,15 @@
         </div>
 
       </div>
+      !--}}
     </div>
   </header>
 
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     {{!-- Default tab is specified in actor-sheet.mjs --}}
+    <a class="item" data-tab="features">Items</a>
     <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="items">Items</a>
     <a class="item" data-tab="effects">Effects</a>
   </nav>
 
@@ -61,9 +60,36 @@
       {{editor system.biography target="system.biography" rollData=rollData button=true owner=owner editable=editable}}
     </div>
 
-    {{!-- Owned Items Tab --}}
-    <div class="tab items" data-group="primary" data-tab="items">
-       {{> "systems/koblike/templates/actor/parts/actor-items.hbs"}}
+ <div class="tab features" data-group="primary" data-tab="features">
+      <section class="grid grid-3col">
+        <aside class="sidebar">
+          <div class="skills flexcol">
+            {{#each system.skills as |skill key|}}
+            
+            <div class="skill flexrow flex-group-center">
+              <label for="system.skills.{{key}}.value" class="resource-label rollable flexlarge align-left" data-roll="{{key}}" title="{{lookup ../config.skills key }}" data-label="{{lookup ../config.skills key }}">{{lookup ../config.skills key }}</label>
+              {{diePicker name=(concat "system.skills." key ".value" ) value=skill.value min=1 max=6 step=1}}
+              <div class='item-image'>
+            <a class='rollable' data-roll="{{key}}" data-label="{{lookup ../config.skills key }}"><img
+               src='systems/koblike/assets/icons/{{lookup ../config.levels skill.value}}.svg'
+                title='{{lookup ../config.levels skill.value}}'
+                width='30'
+                height='30'
+              /></a>
+          </div>
+              
+            </div>
+            {{/each}}
+          </div>
+        </aside>
+        
+        {{!-- For the main features list, span the right two columns --}}
+        <section class="main grid-span-2">
+          {{!-- This is a Handlebars partial. They're stored in the `/parts` folder next to this sheet, and defined in module/helpers/templates.mjs --}}
+          {{> "systems/koblike/templates/actor/parts/actor-items.hbs"}}
+        </section>
+
+      </section>
     </div>
 
     {{!-- Active Effects Tab --}}
