--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -29,7 +29,9 @@
                 height='24'
               /></a>
           </div>
+          <div class="name-block">
           <h4>{{item.name}}</h4>
+          </div>
         </div>
         <div class='item-controls'>
           <a
