--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -1,7 +1,4 @@
 <form class="{{cssClass}}" autocomplete="off">
-      <div class="itemtype resource-label flex-group-right">
-    <p>{{localize (concat 'TYPES.Item.' item.type)}}</p>
-  </div>
   <div class="itemtype subtype resource-label flex-group-right">
     <p>{{item.system.subType}}</p>
   </div>
@@ -50,6 +47,7 @@
     </select>
     
       </div>
+      {{!--
       <div class="resource">
         <label class="resource-label">Roll Formula:</label>
         <span>{{system.formula}}</span>
@@ -68,7 +66,7 @@
           </div>
         </div>
 
-      </div>
+      </div> !--}}
     </div>
   </section>
 </form>
